# f4

./: .cproject  .gdbinit  .gitignore  .project  .travis.yml  Cargo.toml  Makefile  README.md  f4 Debug.launch  gen-examples.sh  memory.x
aligned/: fn.Aligned.html  index.html  struct.Aligned.html  trait.Alignment.html
bare_metal/: index.html  struct.CriticalSection.html  struct.Mutex.html  struct.Peripheral.html  trait.Nr.html
cast/: enum.Error.html  fn.f32.html  fn.f64.html  fn.i16.html  fn.i32.html  fn.i64.html  fn.i8.html  fn.isize.html  fn.u16.html  fn.u32.html  fn.u64.html  fn.u8.html  fn.usize.html  index.html  trait.From.html
ci/: after_success.sh  install.sh  script.sh
cortex_m/: index.html  macro.iprint.html  macro.iprintln.html
cortex_m/asm/: fn.bkpt.html  fn.dmb.html  fn.dsb.html  fn.isb.html  fn.nop.html  fn.wfe.html  fn.wfi.html  index.html
cortex_m/exception/: enum.Exception.html  index.html  struct.ExceptionFrame.html
cortex_m/interrupt/: fn.disable.html  fn.enable.html  fn.free.html  index.html  struct.CriticalSection.html  struct.Mutex.html  trait.Nr.html
cortex_m/itm/: fn.write_aligned.html  fn.write_all.html  fn.write_fmt.html  fn.write_str.html  index.html
cortex_m/peripheral/: constant.CBP.html  (+32 more)
cortex_m_rt/: index.html  macro.default_handler.html  macro.exception.html
cortex_m_semihosting/: fn.syscall.html  fn.syscall1.html  index.html  macro.syscall.html  macro.syscall1.html
either/: enum.Either.html
embedded_hal/: Spi.t.html  enum.Direction.html  index.html  sidebar-items.js  trait.Capture.html  trait.Pwm.html  trait.Qei.html  trait.Spi.html  trait.Timer.html
examples/: adc1.rs  blink.rs  blinky-blocking.rs  blinky.rs  button.rs  capture4.rs  concurrency.rs  dmar.rs  dmat.rs  eeprom.rs  gpio.rs  hello-world.rs  hello.rs  i2c1.rs  i2c_eeprom.rs  imu.rs  itm.rs  led.rs  loopback.rs  mco.rs  preemption.rs  pwm-control.rs  pwm1.rs  resource.rs  roulette.rs  serial.rs  spi1.rs  timer_interrupt.rs  try_until.rs  usart2-dma.rs  usart2-rx-dma.rs  usart2-tx-dma.rs  ws2812.rs
f4/: index.html  macro.printf.html  macro.println.html  macro.uprint!.html  macro.uprint.html  sidebar-items.js
m/: index.html  sidebar-items.js  trait.Float.html
nb/: enum.Error.html  index.html  macro.block.html  type.Result.html
r0/: fn.init_data.html  fn.run_init_array.html  fn.zero_bss.html  index.html  macro.init_array.html  macro.pre_init_array.html
src/: adc.rs  bb.rs  button.rs  capture.rs  clock.rs  dma.rs  dwt.rs  frequency.rs  gpio.rs  i2c.rs  led.rs  leds.rs  lib.rs  lsm9ds1.rs  madgwick_ahrs.rs  math_utils.rs  prelude.rs  pwm.rs  serial.rs  spi.rs  time.rs  timer.rs
static_ref/: index.html  sidebar-items.js  struct.Static.html
stm32f40x/: ADC2.v.html  ADC3.v.html  CAN1.t.html  CAN1.v.html  CAN2.t.html  CAN2.v.html  C_ADC.t.html  C_ADC.v.html  DCMI.t.html  DCMI.v.html  ETHERNET_DMA.t.html  ETHERNET_DMA.v.html  ETHERNET_MAC.t.html  ETHERNET_MAC.v.html  ETHERNET_MMC.t.html  ETHERNET_MMC.v.html  ETHERNET_PTP.t.html  ETHERNET_PTP.v.html  GPIOH.v.html  GPIOI.t.html  GPIOI.v.html  I2C3.v.html  I2S2EXT.t.html  I2S2EXT.v.html  I2S3EXT.t.html  I2S3EXT.v.html  OTG_FS_DEVICE.v.html  OTG_FS_GLOBAL.v.html  OTG_FS_HOST.v.html  OTG_FS_PWRCLK.v.html  OTG_HS_DEVICE.t.html  OTG_HS_DEVICE.v.html  OTG_HS_GLOBAL.t.html  OTG_HS_GLOBAL.v.html  OTG_HS_HOST.t.html  OTG_HS_HOST.v.html  OTG_HS_PWRCLK.t.html  OTG_HS_PWRCLK.v.html  RNG.v.html  SDIO.v.html  (+170 more)
vcell/: index.html  struct.VolatileCell.html
volatile_register/: index.html  struct.RO.html  struct.RW.html  struct.WO.html
(+18074 files in other folders)
