[package]
authors = ["Johannes Sjölund <j.sjolund@gmail.com>", "Jorge Aparicio <jorge@japaric.io>", "Per Lindgren <per.lindgren@ltu.se>"]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the Nucleo-64 stm32f401x"
documentation = "https://docs.rs/f3"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "f4"
repository = "https://github.com/jsjolund/f4"
version = "0.1.0"

[dependencies]
static-ref = "0.2.0"
m = "0.1.1"

[dependencies.cortex-m-debug]
git = "https://gitlab.henriktjader.com/pln/cortex-m-debug.git"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
git = "https://github.com/japaric/embedded-hal"
rev = "7d904f515d15fd5fe7ea34e18820ea83e2651fa2"

[dependencies.nb]
git = "https://github.com/japaric/nb"

[dependencies.stm32f40x]
features = ["rt"]
#version = "0.5.0"
git = "https://gitlab.henriktjader.com/pln/STM32F40x"

[dev-dependencies]
cortex-m = "0.3.0"
cortex-m-rtfm = "0.2.0"
cortex-m-semihosting = "0.2.0"
heapless = "0.1.0"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "=0.3.7"

[profile.release]
debug = true
lto = true
