[package]
authors = ["Johannes Sjölund <j.sjolund@gmail.com>", "Jorge Aparicio <jorge@japaric.io>", "Per Lindgren <per.lindgren@ltu.se>"]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the Nucleo-64 stm32f401x"
documentation = "https://docs.rs/f3"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "f4"
repository = "https://github.com/jsjolund/f4"
version = "0.1.0"

[dependencies]
cortex-m-semihosting = "0.2.0"
static-ref = "0.2.0"
volatile-register = "0.2.0"
m = "0.1.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.cortex-m]
version = "0.3.1"
#git = "https://github.com/japaric/cortex-m"

[dependencies.either]
default-features = false
version = "1.3.0"

[dependencies.embedded-hal]
git = "https://github.com/japaric/embedded-hal"
rev = "7d904f515d15fd5fe7ea34e18820ea83e2651fa2"

[dependencies.nb]
git = "https://github.com/japaric/nb"

[dependencies.stm32f40x]
features = ["rt"]
version = "0.2.0"
git = "https://gitlab.henriktjader.com/pln/STM32F40x"

[dev-dependencies]
heapless = "0.2.0"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.8"

[dev-dependencies.cortex-m-debug]
git = "https://gitlab.henriktjader.com/pln/cortex-m-debug.git"

[dev-dependencies.cortex-m-rtfm]
version = "0.2.0"

[profile.release]
lto = true

[profile.dev]
incremental = false
codegen-units = 1